first working version of portfolio calculator

--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,11 @@
   <header>
     <div class="spacer"></div>
     <div class="links">
-      <a>New Portfolio</a>
+      <a href="new-portfolio.html">New Portfolio</a>
       <a>Saved Portfolios</a>
       <a>Research</a>
       <a>Quick Tips</a>
+      <a>Home</a>
     </div>
     <div class="acct_btns">
       <!-- <a><img src="button-frame.svg"></a> -->
