added dbms, fixed portfolio value feature, properly renders total port value

--- a/public/new-portfolio.html
+++ b/public/new-portfolio.html
@@ -12,7 +12,7 @@
       <a>New Portfolio</a>
       <a>Saved Portfolios</a>
       <a>Research</a>
-      <a>Quick Tips</a>
+      <a href="new-user.html">New User</a>
       <a href="index.html">Home</a>
     </div>
     <div class="acct_btns">
@@ -24,19 +24,24 @@
   <div id="port_page">
       <h1>Create a New Portfolio</h1>
       <div id="New_Portfolio"></div>
+      <div id="portfolio_value"></div>
+      <button id="new_portfolio">New Portfolio</button>
       <form class="new_port">
-        <div class="stock_input">
-            <label for="ticker">Stock:</label>
-            <input type="text" id="ticker"placeholder="Enter a stock ticker symbol here (ex: AAPL)" required>
+        <div id="stocks_container">
+            <div class="stock_input">
+                <label for="ticker">Stock:</label>
+                <input type="text" class="ticker" placeholder="Enter a stock ticker symbol here (ex: AAPL)" required>
+            </div>
+            <div class="stock_input">
+                <label for="amount">Amount:</label>
+                <input type="text" class="amount" placeholder="Enter amount invested in USD (ex: $10000)" required>
+            </div>
+            <div class="stock_input">
+                <label for="date">Date:</label>
+                <input type="text" class="date" placeholder="Enter date invested (ex: 2022-05-04)" required>
+            </div>
         </div>
-        <div class="stock_input">
-            <label for="amount">Amount:</label>
-            <input type="text" id="amount" placeholder="Enter amount invested in USD (ex: $10000)" required>
-        </div>
-        <div class="stock_input">
-            <label for="date">Date:</label>
-            <input type="text" id="date" placeholder="Enter date invested (ex: 2022-05-04)" required>
-        </div>
+        <button id="add_stock">Add Another Stock</button>
         <button id="submission">Submit!</button>
       </form>
       <div id="source">
