cleaned up a lot of code, working version 2

--- a/public/new-portfolio.html
+++ b/public/new-portfolio.html
@@ -41,8 +41,10 @@
                 <input type="text" class="date" placeholder="Enter date invested (ex: 2022-05-04)" required>
             </div>
         </div>
-        <button id="add_stock">Add Another Stock</button>
-        <button id="submission">Submit!</button>
+        <div id="stock_listeners">
+          <button id="add_stock">Add Another Stock</button>
+          <button id="submission">Submit!</button>
+        </div>
       </form>
       <div id="source">
         <p id="credit_to_alpha"><em>*Source: Alpha Vantage API*</em></p>
